# agentic-eks-control-plane

./: .gitignore  .tflint.hcl  .tool-versions  AGENTS.md  CLAUDE.md  Makefile  README.md
.claude/: CLAUDE.md  settings.json  settings.local.json
.codex/: hooks.json
agent/: .env.example  .eslintrc.cjs  Dockerfile  README.md  package-lock.json  (+2 more)
agent-runtime/: .env.example  README.md
backend/: .env.example  Dockerfile  README.md  go.mod  pyproject.toml
backend/app/agents/: planner.py  prompts.py  tools.py  validator.py
backend/app/api/routes/: chat.py  cluster.py  operations.py  terraform.py
backend/app/core/: config.py  logging.py
backend/app/guardrails/: enforcer.py  policies.py  validation.py
backend/app/kubernetes/: client.py  operations.py  reads.py
backend/app/models/: agent.py  operations.py
backend/app/terraform/: client.py  drift.py
backend/cmd/server/: main.go  shutdown_test.go
backend/internal/config/: config.go  config_test.go
backend/internal/guardrails/: enforcer.go  enforcer_test.go  policy.go  policy_test.go  reads_test.go  rollback_floor_test.go  validation.go  validation_test.go
backend/internal/kubernetes/: client.go  client_test.go  errors.go  inspect_test.go  operations.go  operations_test.go  reads.go  reads_test.go  testing_test.go  types.go
backend/internal/logging/: logging.go  logging_test.go
backend/internal/models/: operations.go  operations_test.go
backend/internal/server/: cluster.go  cluster_test.go  operations.go  operations_test.go  server.go  server_test.go  testing_test.go  types.go
backend/scripts/: lint.sh
(+137 files in other folders)
